--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -15,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "gatsby": "^4.6.2",
     "gatsby-plugin-emotion": "^7.6.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^3.0.19",
